--- a/.devcontainer/authors/Dockerfile
+++ b/.devcontainer/authors/Dockerfile
@@ -14,6 +14,8 @@ RUN curl -sL https://deb.nodesource.com/setup_16.x | bash - && apt-get install -
 RUN apt-get update
 RUN apt-get install -y vim
 RUN apt-get install -y jq 
+RUN apt-get install -y git-lfs
+
 
 RUN wget https://github.com/errata-ai/vale/releases/download/v2.3.4/vale_2.3.4_Linux_64-bit.tar.gz
 RUN tar -xvzf vale_2.3.4_Linux_64-bit.tar.gz
