--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,28 +1,28 @@
 {
-	"name": "CodeQL Learning Catalog",
-	"build": {
-		"dockerfile": "./Dockerfile",
-		"context": ".."
-	},
+  "name": "CodeQL Learning Catalog",
+  "build": {
+    "dockerfile": "./Dockerfile",
+    "context": ".."
+  },
 
-	"forwardPorts": [3000],
-	"postCreateCommand": ".devcontainer/postSetup.sh",
+  "forwardPorts": [3000],
+  "postCreateCommand": ".devcontainer/postSetup.sh",
 
-	"features": {
-		"sshd": "latest" 
-	},
+  "features": {
+    "sshd": "latest"
+  },
 
-	"extensions": [
-		"github.vscode-codeql",
-		"slevesque.vscode-zipexplorer"
-	],
+  "extensions": [
+    "github.vscode-codeql",
+    "slevesque.vscode-zipexplorer",
+    "esbenp.prettier-vscode",
+    "stkb.rewrap",
+    "streetsidesoftware.code-spell-checker"
+  ],
 
-	"settings": {
-		"codeQL.runningQueries.memory": 2048,
-		"codeQL.cli.executablePath" : "/opt/codeql/codeql",
-		"csharp.suppressDotnetInstallWarning": true
-	}
-
-
-	
+  "settings": {
+    "codeQL.runningQueries.memory": 2048,
+    "codeQL.cli.executablePath": "/opt/codeql/codeql",
+    "csharp.suppressDotnetInstallWarning": true
+  }
 }
