participants don't need these extensions.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,13 +12,7 @@
     "sshd": "latest"
   },
 
-  "extensions": [
-    "github.vscode-codeql",
-    "slevesque.vscode-zipexplorer",
-    "esbenp.prettier-vscode",
-    "stkb.rewrap",
-    "streetsidesoftware.code-spell-checker"
-  ],
+  "extensions": ["github.vscode-codeql", "slevesque.vscode-zipexplorer"],
 
   "settings": {
     "codeQL.runningQueries.memory": 2048,
