--- a/.devcontainer/authors/Dockerfile
+++ b/.devcontainer/authors/Dockerfile
@@ -30,6 +30,7 @@ RUN git clone https://github.com/jenv/jenv.git ~/.jenv
 RUN echo 'export PATH="$HOME/.jenv/bin:$PATH"' >> ~/.bash_profile
 RUN echo 'eval "$(jenv init -)"' >> ~/.bash_profile
 RUN echo 'source ~/.bash_profile' >> ~/.bashrc
+RUN source ~/.bashrc
 
 # Register JDKs
 RUN jenv add /usr/lib/jvm/jdk8u372-b07
