--- a/.devcontainer/authors/Dockerfile
+++ b/.devcontainer/authors/Dockerfile
@@ -40,6 +40,20 @@ RUN ~/.jenv/bin/jenv add /usr/lib/jvm/java-17-openjdk-amd64
 # Set OpenJDK 8 as default
 RUN ~/.jenv/bin/jenv global 1.8
 
+# Install Gradle
+RUN wget https://services.gradle.org/distributions/gradle-8.1.1-bin.zip
+RUN unzip gradle-8.1.1-bin.zip
+RUN mv gradle-8.1.1/bin/gradle /usr/local/bin/
+RUN rm -rf gradle-8.1.1/
+RUN rm gradle-8.1.1-bin.zip
+
+# Install Maven
+RUN wget https://dlcdn.apache.org/maven/maven-3/3.9.2/binaries/apache-maven-3.9.2-bin.tar.gz
+RUN tar -xf apache-maven-3.9.2
+RUN mv apache-maven-3.9.2/bin/mvn /usr/local/bin/
+RUN rm -rf apache-maven-3.9.2/
+RUN rm apache-maven-3.9.2-bin.tar.gz
+
 RUN wget https://github.com/errata-ai/vale/releases/download/v2.3.4/vale_2.3.4_Linux_64-bit.tar.gz
 RUN tar -xvzf vale_2.3.4_Linux_64-bit.tar.gz
 RUN mv vale /usr/local/bin
