Update pack declarations

--- a/docs/LDF/101/cpp/src/solutions/codeql-pack.lock.yml
+++ b/docs/LDF/101/cpp/src/solutions/codeql-pack.lock.yml
@@ -1,10 +1,4 @@
 ---
 lockVersion: 1.0.0
-dependencies:
-  codeql/cpp-all:
-    version: 0.5.2
-  codeql/ssa:
-    version: 0.0.10
-  codeql/tutorial:
-    version: 0.0.3
+dependencies: {}
 compiled: false
