Rename pack name to something more descriptive

--- a/docs/LDF/101/cpp/test/solutions/qlpack.yml
+++ b/docs/LDF/101/cpp/test/solutions/qlpack.yml
@@ -1,6 +1,6 @@
 ---
 library: false
-name: ldf-101-cpp-solutions-test
+name: ldf-101-cpp-test
 version: 0.0.1
 dependencies:
   ldf-101-cpp-solutions: '*'
