--- a/docs/LDF/101/cpp/src/exercises/qlpack.yml
+++ b/docs/LDF/101/cpp/src/exercises/qlpack.yml
@@ -1,6 +1,6 @@
 ---
 library: false
-name: exercises
+name: ldf-101-cpp/exercises
 version: 0.0.1
 dependencies:
-  codeql/cpp-all: 0.5.2
+  codeql/cpp-all: 0.6.2
