--- a/docs/LDF/101/cpp/test/solutions/qlpack.yml
+++ b/docs/LDF/101/cpp/test/solutions/qlpack.yml
@@ -1,7 +1,7 @@
 ---
 library: false
-name: ldf-101-cpp-test
+name: ldf-101-cpp/test
 version: 0.0.1
 dependencies:
-  ldf-101-cpp-solutions: '*'
+  ldf-101-cpp/solutions: '*'
 extractor: cpp
