--- a/docs/LDF/103/cpp/test/solutions/qlpack.yml
+++ b/docs/LDF/103/cpp/test/solutions/qlpack.yml
@@ -1,7 +1,7 @@
 ---
 library: false
-name: ldf-103-solutions-tests
+name: ldf-103-cpp/test
 version: 0.0.1
 dependencies:
-  'ldf-103-solutions': '*'
+  ldf-103-cpp/solutions: '*'
 extractor: cpp
