--- a/docs/LDF/102/cpp/test/solutions/qlpack.yml
+++ b/docs/LDF/102/cpp/test/solutions/qlpack.yml
@@ -1,7 +1,7 @@
 ---
 library: false
-name: solutions-tests
+name: ldf-102-cpp/solutions-test
 version: 0.0.1
 dependencies:
-  'solutions': '*'
+  ldf-102-cpp/solutions: '*'
 extractor: cpp
